+ initial creation of the update checker